- Fixed bug #39320 (ZEND_HASH_APPLY_STOP causes deletion). (Marcus)
- Fixed bug #39313 (spl_autoload triggers Fatal error). (Marcus)
- Fixed bug #39265 (Fixed path handling inside mod_files.sh). 
  (michal dot taborsky at gmail dot com, Ilia)
- Fixed bug #39215 (Inappropriate close of stdin/stdout/stderr). (Wez,Ilia)
- Fixed bug #39151 (Parse error in recursiveiteratoriterator.php). (Marcus)
- Fixed bug #39090 (DirectoryFilterDots doxygen docs and example is wrong).
  (Marcus)
- Fixed bug #38698 (for some keys cdbmake creates corrupted db and cdb can't 
  read valid db). (Marcus)
- Fixed bug #38680 (Added missing handling of basic types in json_decode).
  (Ilia) 

02 Nov 2006, PHP 5.2.0
- Updated bundled OpenSSL to version 0.9.8d in the Windows distro. (Edin)
- Updated Postgresql client libraries to 8.1.4 in the Windows distro. (Edin)
- Updated PCRE to version 6.7. (Ilia)
- Updated libsqlite in ext/pdo_sqlite to 3.3.7. (Ilia)
- Updated bundled MySQL client library to version 5.0.22 in the Windows 
  distribution. (Edin)
- Updated timezonedb to version 2006.7. (Derick)

- Added ability to make SOAP call userspace PHP<->XML converters. (Dmitry)
- Added support for character sets in pg_escape_string() for PostgreSQL 8.1.4 
  and higher. (Ilia)
- Added support for character sets in PDO quote() method for PostgreSQL 8.1.4 
  and higher. (Ilia)
- Added DSA key generation support to openssl_pkey_new(), FR #38731 (marci
  at balabit dot hu, Tony)
- Added SoapServer::setObject() method (it is a simplified version of
  SoapServer::setClass() method). (Dmitry)
- Added support for hexadecimal entity in imagettftext() for the bundled GD.
  (Pierre)
- Added support for httpOnly flag for session extension and cookie setting 
  functions. (Scott MacVicar, Ilia)
- Added version specific registry keys to allow different configurations for 
  different php version. (Richard, Dmitry)
- Added "PHPINIDir" Apache directive to apache and apache_hooks SAPIs.
  (Dmitry)